force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <pluralLabel>Candidates</pluralLabel>
    <fullName>Candidate__c</fullName>
    <description>Candidate object</description>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <label>Candidate</label>
</CustomObject>