force-app/main/default/objects/Candidate__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <type>Picklist</type>
    <label>Level</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freshman</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>Sophomore</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>Junior</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>Senior</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>Graduate</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>Other</fullName>
                <active>true</active>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>