force-app/main/default/objects/Candidate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <type>Picklist</type>
    <label>Status</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>Interviewing</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>Hired</fullName>
                <active>true</active>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <active>true</active>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>